Pause the audio player in case of an incoming call or head phone removal

--- a/example-gradle.properties
+++ b/example-gradle.properties
@@ -18,11 +18,11 @@ org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=1081
 
 
-FabricApiKey=your_key_here
-FabricSecretKey=your_key_here
-GoogleAndroidClientId=your_key_here
-GoogleServerClientId=your_key_here
+FabricApiKey="your_key_here"
+FabricSecretKey="your_key_here"
+GoogleAndroidClientId="your_key_here"
+GoogleServerClientId="your_key_here"
 
-ANDROID_STORE_PASSWORD=your_key_here
-ANDROID_STORE_ALIAS=your_key_here
-ANDROID_KEY_PASSWORD=your_key_here
+ANDROID_STORE_PASSWORD="your_key_here"
+ANDROID_STORE_ALIAS="your_key_here"
+ANDROID_KEY_PASSWORD="your_key_here"
