--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,11 @@ android {
 //        exclude "lib/mips"
 //    }
 
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "cloud.veezee.android"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         renderscriptTargetApi 21
@@ -64,11 +64,11 @@ android {
     dependencies {
         implementation fileTree(dir: 'libs', include: ['*.jar'])
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation "com.android.support:appcompat-v7:27.1.1"
-        implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+        implementation "com.android.support:appcompat-v7:28.0.0-rc02"
+        implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+        implementation 'com.android.support:design:28.0.0-rc02'
+        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
         implementation 'com.google.android.gms:play-services-auth:16.0.0'
-        implementation 'com.android.support:cardview-v7:27.1.1'
-        implementation 'com.android.support:design:27.1.1'
         implementation 'me.everything:overscroll-decor-android:1.0.4'
         implementation 'com.miguelcatalan:materialsearchview:1.4.0'
         implementation 'com.google.android.exoplayer:exoplayer:2.6.0'
