--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,10 @@ android {
     dependencies {
         implementation fileTree(dir: 'libs', include: ['*.jar'])
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        implementation "com.android.support:appcompat-v7:28.0.0-rc02"
-        implementation 'com.android.support:cardview-v7:28.0.0-rc02'
-        implementation 'com.android.support:design:28.0.0-rc02'
+        implementation "org.jetbrains.anko:anko-commons:0.10.7"
+        implementation "com.android.support:appcompat-v7:28.0.0"
+        implementation 'com.android.support:cardview-v7:28.0.0'
+        implementation 'com.android.support:design:28.0.0'
         implementation 'com.android.support.constraint:constraint-layout:1.1.3'
         implementation 'com.google.android.gms:play-services-auth:16.0.0'
         implementation 'me.everything:overscroll-decor-android:1.0.4'
