--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,13 +66,15 @@ android {
         implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
         implementation "org.jetbrains.anko:anko-commons:0.10.7"
         implementation "com.android.support:appcompat-v7:28.0.0"
+        implementation "com.android.support:support-media-compat:28.0.0"
+        implementation "com.android.support:support-v4:28.0.0"
         implementation 'com.android.support:cardview-v7:28.0.0'
         implementation 'com.android.support:design:28.0.0'
         implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-        implementation 'com.google.android.gms:play-services-auth:16.0.0'
+        implementation 'com.google.android.gms:play-services-auth:16.0.1'
         implementation 'me.everything:overscroll-decor-android:1.0.4'
         implementation 'com.miguelcatalan:materialsearchview:1.4.0'
-        implementation 'com.google.android.exoplayer:exoplayer:2.6.0'
+        implementation 'com.google.android.exoplayer:exoplayer:2.7.0'
         implementation 'com.android.volley:volley:1.1.0' 
         implementation 'com.google.code.gson:gson:2.8.2'
         implementation 'com.sothree.slidinguppanel:library:3.4.0'
