Made compatible with Android 10, supports system wide dark mode

--- a/example-gradle.properties
+++ b/example-gradle.properties
@@ -16,10 +16,8 @@
 systemProp.http.proxyHost=127.0.0.1
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=1081
+android.useAndroidX=true
 
-
-FabricApiKey="your_key_here"
-FabricSecretKey="your_key_here"
 GoogleAndroidClientId="your_key_here"
 GoogleServerClientId="your_key_here"
 
